app conversion added

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 
     <h3 class="mb-4"> Oops! Something went wrong! </h3>
 
-    <div class="m-5"><img src="{% static 'images/dropped_spaghetti.jpg' %}" alt="Dropped spaghetti"></div>
+    <div class="m-5 d-flex justify-content-center align-items-center"><img src="{% static 'images/dropped_spaghetti.jpg' %}" alt="Dropped spaghetti"></div>
 
     <div class="m-3"><a href="{% url "index" %}" class = "btn btn-secondary"> Homepage </a></div>
 
