--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,10 @@
                     <a class="nav-link" href="{% url 'recipes_list' %}"> Recipes </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'recipe_create' %}"> Add new recipe </a>
+                    <a class="nav-link" href="{% url 'recipe_create' %}"> Add recipe </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'convert' %}"> Unit converter </a>
                 </li>
 
                 {% if request.user.is_authenticated %}
@@ -90,9 +93,9 @@
 
                 {% endif %}
 
-{#                <li>#}
-{#                    <a class="nav-link" href="{% url 'user_list' %}"> User_list </a>#}
-{#                </li>#}
+                {#                <li>#}
+                {#                    <a class="nav-link" href="{% url 'user_list' %}"> User_list </a>#}
+                {#                </li>#}
                 <li>
                     <a class="btn btn-outline-secondary" href="{{ request.META.HTTP_REFERER|escape }}"> Go back </a>
                 </li>
@@ -129,9 +132,9 @@
 {#<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>#}
 {#<script src="../../assets/js/vendor/popper.min.js"></script>#}
 {#<script src="../../dist/js/bootstrap.min.js"></script>#}
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
