--- a/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
+++ b/MommysCookbookProject/recipe/templates/recipe/recipe_edit.html
@@ -68,7 +68,11 @@
 
         <button class="btn btn-dark">Save changes</button>
     </form>
+{#    {% if recipe.image != default %}#}
     <p class="mt-3">
+        <a href="{% url 'image_process' recipe.slug %}" class="btn btn-secondary text-dark"> EDIT IMAGE </a>
+    </p>
+        <p class="mt-3">
         <a href="{% url 'recipe_delete' recipe.slug %}" class="btn btn-danger text-dark"> DELETE </a>
     </p>
     <p>
